chore: Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -111,32 +111,34 @@
         </div>
         <div class="col-lg-6">
           <p class="text-white">
-            Olá! Sou Victor, um desenvolvedor FullStack vivendo na vibrante
-            cidade de Manaus, AM, Brasil.
+            Olá! Meu nome é Victor, sou um desenvolvedor FullStack residente na
+            vibrante cidade de Manaus, AM, Brasil.
           </p>
           <p class="text-white">
-            Minha paixão por tecnologia começou cedo e me levou a escolher a
-            carreira de desenvolvedor há cerca de 2 anos e meio. Adoro criar
-            sistemas e sites, e tenho um interesse especial em projetos que
-            envolvem inteligência artificial. Além disso, tenho experiência em
-            Python e utilizo o FastAPI para desenvolver aplicações web
-            eficientes e de alto desempenho.
+            Minha paixão pela tecnologia surgiu cedo, o que me levou a seguir a
+            carreira de desenvolvedor há aproximadamente 2 anos e meio. Tenho
+            grande prazer em criar sistemas e sites, com um interesse particular
+            por projetos que envolvem inteligência artificial. Além disso,
+            possuo experiência com Python e utilizo o FastAPI para desenvolver
+            aplicações web eficientes e de alto desempenho.
           </p>
           <p class="text-white">
-            Ao longo da minha jornada, adquiri habilidades em vários frameworks
-            PHP, incluindo Laravel e Codeigniter. Também tenho experiência com
-            Node.js, utilizando o Express. No front-end, estou confortável
-            trabalhando com React e Next.js, além de ter um sólido conhecimento
-            em HTML, CSS e JavaScript.
+            Minha experiência abrange várias linguagens e frameworks, incluindo
+            PHP (Laravel, Codeigniter), Node.js (Express), e Python (Django,
+            Flask). No front-end, tenho proficiência em React, Next.js, HTML,
+            CSS e JavaScript.
           </p>
           <p class="text-white">
-            Minha experiência em desenvolvimento me permitiu ganhar um profundo
-            respeito na minha área de atuação. Estou comprometido em fornecer o
-            melhor serviço possível aos meus clientes.
+            Meu compromisso com a excelência no desenvolvimento de software me
+            levou a um profundo respeito pela minha profissão. Estou sempre
+            empenhado em fornecer o melhor serviço possível para meus clientes.
           </p>
           <h4 class="text-white">Redes Sociais:</h4>
           <div style="display: flex; flex-direction: row; gap: 1rem">
-            <a href="https://www.linkedin.com/in/victorrochasilva2023/" target="_blank">
+            <a
+              href="https://www.linkedin.com/in/victorrochasilva2023/"
+              target="_blank"
+            >
               <i class="fab fa-linkedin fa-2x text-info"></i>
             </a>
             <a href="https://www.instagram.com/mmii_victor/" target="_blank">
@@ -229,7 +231,7 @@
 
     <footer
       class="text-white text-center p-3"
-      style="background-color: rgb(10, 16, 38);"
+      style="background-color: rgb(10, 16, 38)"
     >
       <p>&copy; 2024 Victor Rocha. Todos os direitos reservados.</p>
     </footer>
